Reward system done, needs testing

--- a/raf_rpg.ipynb
+++ b/raf_rpg.ipynb
@@ -614,7 +614,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 1,
       "metadata": {
         "id": "ua42_YdW3GRq"
       },
@@ -638,7 +638,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 8,
       "metadata": {
         "id": "RDs7ATb83UUb"
       },
@@ -655,7 +655,9 @@
         "    response = requests.request(\"PUT\", url, headers=headers, data=payload)\n",
         "    tt = response.json()\n",
         "    print(tt,type(tt))\n",
+        "    self.tactics = Tactics(self.url_root)\n",
         "\n",
+        "    \n",
         "  def reset(self,number = -1):\n",
         "    if number == -1:\n",
         "      url = self.url_root+\"/map/restart\"\n",
@@ -665,40 +667,22 @@
         "    headers = {}\n",
         "    response = requests.request(\"PUT\", url, headers=headers, data=payload)\n",
         "    output = response.json()\n",
+        "    print(output)\n",
+        "    self.tactics = Tactics(self.url_root)\n",
         "    return output\n",
         "\n",
         "  def step(self,action):\n",
-        "    # url_sufix = \"wait\"\n",
-        "    # if action == 0:\n",
-        "    #   url_sufix = \"up\"\n",
-        "    # elif action == 1:\n",
-        "    #   url_sufix = \"down\"\n",
-        "    # elif action == 2:\n",
-        "    #   url_sufix = \"left\"\n",
-        "    # elif action == 3:\n",
-        "    #   url_sufix = \"right\"\n",
-        "    # elif action == 4:\n",
-        "    #   url_sufix = \"wait\"\n",
         "\n",
-        "    # url = self.url_root + \"/player/\" + url_sufix\n",
-        "    payload={}\n",
-        "    headers = {}\n",
-        "    # response = requests.request(\"PUT\", url, headers=headers, data=payload)\n",
-        "    # time.sleep(0.02)\n",
+        "    prev, curr, new_field = self.tactics.step(action)\n",
+        "    reward = self.tactics.get_reward(prev, curr, has_moved=self.tactics.has_moved(action), new_field=new_field)\n",
         "\n",
         "    url = self.url_root + \"/map/full/matrix\"\n",
-        "    response = requests.request(\"GET\", url, headers=headers, data=payload)\n",
+        "    response = requests.request(\"GET\", url, headers={}, data={})\n",
         "    next_observation = response.json()\n",
         "\n",
-        "    url = self.url_root + \"/player/inventory/value\"\n",
-        "    response = requests.request(\"GET\", url, headers=headers, data=payload)\n",
-        "    reward = response.json()\n",
+        "    is_over = self.tactics.is_over()\n",
         "\n",
-        "    url = self.url_root + \"/map/isover\"\n",
-        "    response = requests.request(\"GET\", url, headers=headers, data=payload)\n",
-        "    done = response.json()\n",
-        "\n",
-        "    return next_observation,reward,done,{}\n",
+        "    return next_observation, reward, is_over, {}\n",
         "\n",
         "  def render(self):\n",
         "    payload={}\n",
@@ -739,7 +723,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -762,33 +746,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 138,
-      "metadata": {
-        "id": "K8H-s0YX-BVn"
-      },
-      "outputs": [],
-      "source": [
-        "observation = game.render()"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "0ybzz0az-HF3",
-        "outputId": "45d29e49-7c36-45bb-f0d7-5dcbd710dd47"
-      },
-      "outputs": [],
-      "source": [
-        "print(np.matrix(observation))"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 11,
       "metadata": {
         "id": "l5iaVrKI8Ndm"
       },
@@ -797,10 +755,11 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
+            "True\n",
             "##############################\n",
             "[['-' '-' '-' '-' '-' '-' '-' '-' '-' '-' '-' '-' '-' '-' '-' '-' '-' '-'\n",
             "  '-' '-' '-' '-' '-' '-' '-' '-']\n",
-            " ['-' '_' '_' '_' '_' '_' '_' '_' '_' '_' 'B' '_' '_' '_' '_' '_' '_' '-'\n",
+            " ['-' '_' '_' '_' '_' '_' '_' '_' '_' 'B' '_' '_' '_' '_' '_' '_' '_' '-'\n",
             "  '-' '-' '-' '-' '-' '-' '-' '-']\n",
             " ['-' '_' 'M' '_' '_' '|' '_' '_' '$' '$' '$' '$' '_' '_' '_' '_' '_' '-'\n",
             "  '-' '-' '-' '-' '-' '-' '-' '-']\n",
@@ -814,7 +773,7 @@
             "  '+' '+' '+' '+' '+' '+' '-' '-']\n",
             " ['-' '_' '_' '_' '_' '_' '_' '_' '_' '_' '>' '>' '$' '$' '$' '$' '+' '+'\n",
             "  '$' '$' '$' '$' '$' '$' '-' '-']\n",
-            " ['-' '_' '_' '_' '_' '_' '_' '_' '_' 'V' '>' '>' '>' '+' '+' '+' '+' '+'\n",
+            " ['-' '_' '_' '_' '_' '_' '_' 'V' '_' '_' '>' '>' '>' '+' '+' '+' '+' '+'\n",
             "  '$' '$' '$' '$' '$' '$' '-' '-']\n",
             " ['-' '_' '_' '_' '_' '_' '_' '_' '_' '_' '>' '>' '+' '+' '+' '$' '$' '$'\n",
             "  '$' '$' '$' '$' '$' '$' '-' '-']\n",
@@ -831,7 +790,7 @@
             "##############################\n",
             "[['-' '-' '-' '-' '-' '-' '-' '-' '-' '-' '-' '-' '-' '-' '-' '-' '-' '-'\n",
             "  '-' '-' '-' '-' '-' '-' '-' '-']\n",
-            " ['-' '_' '_' '_' '_' '_' '_' '_' '_' '_' 'B' '_' '_' '_' '_' '_' '_' '-'\n",
+            " ['-' '_' '_' '_' '_' '_' '_' '_' '_' 'B' '_' '_' '_' '_' '_' '_' '_' '-'\n",
             "  '-' '-' '-' '-' '-' '-' '-' '-']\n",
             " ['-' '_' 'M' '_' '_' '|' '_' '_' '$' '$' '$' '$' '_' '_' '_' '_' '_' '-'\n",
             "  '-' '-' '-' '-' '-' '-' '-' '-']\n",
@@ -845,7 +804,7 @@
             "  '+' '+' '+' '+' '+' '+' '-' '-']\n",
             " ['-' '_' '_' '_' '_' '_' '_' '_' '_' '_' '>' '>' '$' '$' '$' '$' '+' '+'\n",
             "  '$' '$' '$' '$' '$' '$' '-' '-']\n",
-            " ['-' '_' '_' '_' '_' '_' '_' '_' '_' 'V' '>' '>' '>' '+' '+' '+' '+' '+'\n",
+            " ['-' '_' '_' '_' '_' '_' '_' 'V' '_' '_' '>' '>' '>' '+' '+' '+' '+' '+'\n",
             "  '$' '$' '$' '$' '$' '$' '-' '-']\n",
             " ['-' '_' '_' '_' '_' '_' '_' '_' '_' '_' '>' '>' '+' '+' '+' '$' '$' '$'\n",
             "  '$' '$' '$' '$' '$' '$' '-' '-']\n",
@@ -857,7 +816,7 @@
             "  '>' '>' '-' '-' '-' '-' '-' '-']]\n",
             "------------------------------\n",
             "Move: 2\n",
-            "Reward: 4\n",
+            "Reward: 0\n",
             "##############################\n",
             "##############################\n",
             "[['-' '-' '-' '-' '-' '-' '-' '-' '-' '-' '-' '-' '-' '-' '-' '-' '-' '-'\n",
@@ -876,7 +835,7 @@
             "  '+' '+' '+' '+' '+' '+' '-' '-']\n",
             " ['-' '_' '_' '_' '_' '_' '_' '_' '_' '_' '>' '>' '$' '$' '$' '$' '+' '+'\n",
             "  '$' '$' '$' '$' '$' '$' '-' '-']\n",
-            " ['-' '_' '_' '_' '_' '_' '_' '_' '_' 'V' '>' '>' '>' '+' '+' '+' '+' '+'\n",
+            " ['-' '_' '_' '_' '_' '_' '_' 'V' '_' '_' '>' '>' '>' '+' '+' '+' '+' '+'\n",
             "  '$' '$' '$' '$' '$' '$' '-' '-']\n",
             " ['-' '_' '_' '_' '_' '_' '_' '_' '_' '_' '>' '>' '+' '+' '+' '$' '$' '$'\n",
             "  '$' '$' '$' '$' '$' '$' '-' '-']\n",
@@ -888,7 +847,7 @@
             "  '>' '>' '-' '-' '-' '-' '-' '-']]\n",
             "------------------------------\n",
             "Move: 3\n",
-            "Reward: 4\n",
+            "Reward: 0\n",
             "##############################\n",
             "##############################\n",
             "Illegal move!\n",
@@ -908,9 +867,9 @@
             "  '+' '+' '+' '+' '+' '+' '-' '-']\n",
             " ['-' '_' '_' '_' '_' '_' '_' '_' '_' '_' '>' '>' '$' '$' '$' '$' '+' '+'\n",
             "  '$' '$' '$' '$' '$' '$' '-' '-']\n",
-            " ['-' '_' '_' '_' '_' '_' '_' '_' '_' '_' 'V' '>' '>' '+' '+' '+' '+' '+'\n",
+            " ['-' '_' '_' '_' '_' '_' '_' '_' '_' '_' '>' '>' '>' '+' '+' '+' '+' '+'\n",
             "  '$' '$' '$' '$' '$' '$' '-' '-']\n",
-            " ['-' '_' '_' '_' '_' '_' '_' '_' '_' '_' '>' '>' '+' '+' '+' '$' '$' '$'\n",
+            " ['-' '_' '_' '_' '_' '_' '_' 'V' '_' '_' '>' '>' '+' '+' '+' '$' '$' '$'\n",
             "  '$' '$' '$' '$' '$' '$' '-' '-']\n",
             " ['-' '_' '_' '_' '_' '_' '_' '_' '_' '_' '>' '>' '$' '$' '$' '$' '$' '$'\n",
             "  '$' '$' '$' '$' '$' '$' '-' '-']\n",
@@ -926,7 +885,7 @@
             "Illegal move!\n",
             "[['-' '-' '-' '-' '-' '-' '-' '-' '-' '-' '-' '-' '-' '-' '-' '-' '-' '-'\n",
             "  '-' '-' '-' '-' '-' '-' '-' '-']\n",
-            " ['-' '_' '_' '_' '_' '_' '_' '_' 'B' '_' '_' '_' '_' '_' '_' '_' '_' '-'\n",
+            " ['-' '_' '_' '_' '_' '_' '_' '_' '_' '_' 'B' '_' '_' '_' '_' '_' '_' '-'\n",
             "  '-' '-' '-' '-' '-' '-' '-' '-']\n",
             " ['-' '_' 'M' '_' '_' '|' '_' '_' '$' '$' '$' '$' '_' '_' '_' '_' '_' '-'\n",
             "  '-' '-' '-' '-' '-' '-' '-' '-']\n",
@@ -940,9 +899,9 @@
             "  '+' '+' '+' '+' '+' '+' '-' '-']\n",
             " ['-' '_' '_' '_' '_' '_' '_' '_' '_' '_' '>' '>' '$' '$' '$' '$' '+' '+'\n",
             "  '$' '$' '$' '$' '$' '$' '-' '-']\n",
-            " ['-' '_' '_' '_' '_' '_' '_' '_' '_' '_' 'V' '>' '>' '+' '+' '+' '+' '+'\n",
+            " ['-' '_' '_' '_' '_' '_' '_' '_' '_' '_' '>' '>' '>' '+' '+' '+' '+' '+'\n",
             "  '$' '$' '$' '$' '$' '$' '-' '-']\n",
-            " ['-' '_' '_' '_' '_' '_' '_' '_' '_' '_' '>' '>' '+' '+' '+' '$' '$' '$'\n",
+            " ['-' '_' '_' '_' '_' '_' '_' 'V' '_' '_' '>' '>' '+' '+' '+' '$' '$' '$'\n",
             "  '$' '$' '$' '$' '$' '$' '-' '-']\n",
             " ['-' '_' '_' '_' '_' '_' '_' '_' '_' '_' '>' '>' '$' '$' '$' '$' '$' '$'\n",
             "  '$' '$' '$' '$' '$' '$' '-' '-']\n",
@@ -958,7 +917,7 @@
             "Illegal move!\n",
             "[['-' '-' '-' '-' '-' '-' '-' '-' '-' '-' '-' '-' '-' '-' '-' '-' '-' '-'\n",
             "  '-' '-' '-' '-' '-' '-' '-' '-']\n",
-            " ['-' '_' '_' '_' '_' '_' '_' '_' 'B' '_' '_' '_' '_' '_' '_' '_' '_' '-'\n",
+            " ['-' '_' '_' '_' '_' '_' '_' '_' '_' '_' 'B' '_' '_' '_' '_' '_' '_' '-'\n",
             "  '-' '-' '-' '-' '-' '-' '-' '-']\n",
             " ['-' '_' 'M' '_' '_' '|' '_' '_' '$' '$' '$' '$' '_' '_' '_' '_' '_' '-'\n",
             "  '-' '-' '-' '-' '-' '-' '-' '-']\n",
@@ -972,9 +931,9 @@
             "  '+' '+' '+' '+' '+' '+' '-' '-']\n",
             " ['-' '_' '_' '_' '_' '_' '_' '_' '_' '_' '>' '>' '$' '$' '$' '$' '+' '+'\n",
             "  '$' '$' '$' '$' '$' '$' '-' '-']\n",
-            " ['-' '_' '_' '_' '_' '_' '_' '_' '_' '_' 'V' '>' '>' '+' '+' '+' '+' '+'\n",
+            " ['-' '_' '_' '_' '_' '_' '_' '_' '_' '_' '>' '>' '>' '+' '+' '+' '+' '+'\n",
             "  '$' '$' '$' '$' '$' '$' '-' '-']\n",
-            " ['-' '_' '_' '_' '_' '_' '_' '_' '_' '_' '>' '>' '+' '+' '+' '$' '$' '$'\n",
+            " ['-' '_' '_' '_' '_' '_' '_' 'V' '_' '_' '>' '>' '+' '+' '+' '$' '$' '$'\n",
             "  '$' '$' '$' '$' '$' '$' '-' '-']\n",
             " ['-' '_' '_' '_' '_' '_' '_' '_' '_' '_' '>' '>' '$' '$' '$' '$' '$' '$'\n",
             "  '$' '$' '$' '$' '$' '$' '-' '-']\n",
@@ -990,7 +949,7 @@
             "Illegal move!\n",
             "[['-' '-' '-' '-' '-' '-' '-' '-' '-' '-' '-' '-' '-' '-' '-' '-' '-' '-'\n",
             "  '-' '-' '-' '-' '-' '-' '-' '-']\n",
-            " ['-' '_' '_' '_' '_' '_' '_' '_' 'B' '_' '_' '_' '_' '_' '_' '_' '_' '-'\n",
+            " ['-' '_' '_' '_' '_' '_' '_' '_' '_' '_' 'B' '_' '_' '_' '_' '_' '_' '-'\n",
             "  '-' '-' '-' '-' '-' '-' '-' '-']\n",
             " ['-' '_' 'M' '_' '_' '|' '_' '_' '$' '$' '$' '$' '_' '_' '_' '_' '_' '-'\n",
             "  '-' '-' '-' '-' '-' '-' '-' '-']\n",
@@ -1004,9 +963,9 @@
             "  '+' '+' '+' '+' '+' '+' '-' '-']\n",
             " ['-' '_' '_' '_' '_' '_' '_' '_' '_' '_' '>' '>' '$' '$' '$' '$' '+' '+'\n",
             "  '$' '$' '$' '$' '$' '$' '-' '-']\n",
-            " ['-' '_' '_' '_' '_' '_' '_' '_' '_' '_' '>' '>' '>' '+' '+' '+' '+' '+'\n",
+            " ['-' '_' '_' '_' '_' '_' '_' 'V' '_' '_' '>' '>' '>' '+' '+' '+' '+' '+'\n",
             "  '$' '$' '$' '$' '$' '$' '-' '-']\n",
-            " ['-' '_' '_' '_' '_' '_' '_' '_' '_' '_' 'V' '>' '+' '+' '+' '$' '$' '$'\n",
+            " ['-' '_' '_' '_' '_' '_' '_' '_' '_' '_' '>' '>' '+' '+' '+' '$' '$' '$'\n",
             "  '$' '$' '$' '$' '$' '$' '-' '-']\n",
             " ['-' '_' '_' '_' '_' '_' '_' '_' '_' '_' '>' '>' '$' '$' '$' '$' '$' '$'\n",
             "  '$' '$' '$' '$' '$' '$' '-' '-']\n",
@@ -1022,7 +981,7 @@
             "Illegal move!\n",
             "[['-' '-' '-' '-' '-' '-' '-' '-' '-' '-' '-' '-' '-' '-' '-' '-' '-' '-'\n",
             "  '-' '-' '-' '-' '-' '-' '-' '-']\n",
-            " ['-' '_' '_' '_' '_' '_' '_' '_' 'B' '_' '_' '_' '_' '_' '_' '_' '_' '-'\n",
+            " ['-' '_' '_' '_' '_' '_' '_' '_' '_' '_' 'B' '_' '_' '_' '_' '_' '_' '-'\n",
             "  '-' '-' '-' '-' '-' '-' '-' '-']\n",
             " ['-' '_' 'M' '_' '_' '|' '_' '_' '$' '$' '$' '$' '_' '_' '_' '_' '_' '-'\n",
             "  '-' '-' '-' '-' '-' '-' '-' '-']\n",
@@ -1036,9 +995,9 @@
             "  '+' '+' '+' '+' '+' '+' '-' '-']\n",
             " ['-' '_' '_' '_' '_' '_' '_' '_' '_' '_' '>' '>' '$' '$' '$' '$' '+' '+'\n",
             "  '$' '$' '$' '$' '$' '$' '-' '-']\n",
-            " ['-' '_' '_' '_' '_' '_' '_' '_' '_' '_' '>' '>' '>' '+' '+' '+' '+' '+'\n",
+            " ['-' '_' '_' '_' '_' '_' '_' 'V' '_' '_' '>' '>' '>' '+' '+' '+' '+' '+'\n",
             "  '$' '$' '$' '$' '$' '$' '-' '-']\n",
-            " ['-' '_' '_' '_' '_' '_' '_' '_' '_' '_' 'V' '>' '+' '+' '+' '$' '$' '$'\n",
+            " ['-' '_' '_' '_' '_' '_' '_' '_' '_' '_' '>' '>' '+' '+' '+' '$' '$' '$'\n",
             "  '$' '$' '$' '$' '$' '$' '-' '-']\n",
             " ['-' '_' '_' '_' '_' '_' '_' '_' '_' '_' '>' '>' '$' '$' '$' '$' '$' '$'\n",
             "  '$' '$' '$' '$' '$' '$' '-' '-']\n",
@@ -1054,7 +1013,7 @@
             "Illegal move!\n",
             "[['-' '-' '-' '-' '-' '-' '-' '-' '-' '-' '-' '-' '-' '-' '-' '-' '-' '-'\n",
             "  '-' '-' '-' '-' '-' '-' '-' '-']\n",
-            " ['-' '_' '_' '_' '_' '_' '_' '_' 'B' '_' '_' '_' '_' '_' '_' '_' '_' '-'\n",
+            " ['-' '_' '_' '_' '_' '_' '_' '_' '_' '_' '_' 'B' '_' '_' '_' '_' '_' '-'\n",
             "  '-' '-' '-' '-' '-' '-' '-' '-']\n",
             " ['-' '_' 'M' '_' '_' '|' '_' '_' '$' '$' '$' '$' '_' '_' '_' '_' '_' '-'\n",
             "  '-' '-' '-' '-' '-' '-' '-' '-']\n",
@@ -1068,9 +1027,9 @@
             "  '+' '+' '+' '+' '+' '+' '-' '-']\n",
             " ['-' '_' '_' '_' '_' '_' '_' '_' '_' '_' '>' '>' '$' '$' '$' '$' '+' '+'\n",
             "  '$' '$' '$' '$' '$' '$' '-' '-']\n",
-            " ['-' '_' '_' '_' '_' '_' '_' '_' '_' '_' '>' '>' '>' '+' '+' '+' '+' '+'\n",
+            " ['-' '_' '_' '_' '_' '_' '_' 'V' '_' '_' '>' '>' '>' '+' '+' '+' '+' '+'\n",
             "  '$' '$' '$' '$' '$' '$' '-' '-']\n",
-            " ['-' '_' '_' '_' '_' '_' '_' '_' '_' '_' 'V' '>' '+' '+' '+' '$' '$' '$'\n",
+            " ['-' '_' '_' '_' '_' '_' '_' '_' '_' '_' '>' '>' '+' '+' '+' '$' '$' '$'\n",
             "  '$' '$' '$' '$' '$' '$' '-' '-']\n",
             " ['-' '_' '_' '_' '_' '_' '_' '_' '_' '_' '>' '>' '$' '$' '$' '$' '$' '$'\n",
             "  '$' '$' '$' '$' '$' '$' '-' '-']\n",
@@ -1086,7 +1045,7 @@
             "Illegal move!\n",
             "[['-' '-' '-' '-' '-' '-' '-' '-' '-' '-' '-' '-' '-' '-' '-' '-' '-' '-'\n",
             "  '-' '-' '-' '-' '-' '-' '-' '-']\n",
-            " ['-' '_' '_' '_' '_' '_' '_' '_' 'B' '_' '_' '_' '_' '_' '_' '_' '_' '-'\n",
+            " ['-' '_' '_' '_' '_' '_' '_' '_' '_' '_' '_' 'B' '_' '_' '_' '_' '_' '-'\n",
             "  '-' '-' '-' '-' '-' '-' '-' '-']\n",
             " ['-' '_' 'M' '_' '_' '|' '_' '_' '$' '$' '$' '$' '_' '_' '_' '_' '_' '-'\n",
             "  '-' '-' '-' '-' '-' '-' '-' '-']\n",
@@ -1100,11 +1059,11 @@
             "  '+' '+' '+' '+' '+' '+' '-' '-']\n",
             " ['-' '_' '_' '_' '_' '_' '_' '_' '_' '_' '>' '>' '$' '$' '$' '$' '+' '+'\n",
             "  '$' '$' '$' '$' '$' '$' '-' '-']\n",
-            " ['-' '_' '_' '_' '_' '_' '_' '_' '_' '_' '>' '>' '>' '+' '+' '+' '+' '+'\n",
+            " ['-' '_' '_' '_' '_' '_' '_' '_' 'V' '_' '>' '>' '>' '+' '+' '+' '+' '+'\n",
             "  '$' '$' '$' '$' '$' '$' '-' '-']\n",
             " ['-' '_' '_' '_' '_' '_' '_' '_' '_' '_' '>' '>' '+' '+' '+' '$' '$' '$'\n",
             "  '$' '$' '$' '$' '$' '$' '-' '-']\n",
-            " ['-' '_' '_' '_' '_' '_' '_' '_' '_' '_' 'V' '>' '$' '$' '$' '$' '$' '$'\n",
+            " ['-' '_' '_' '_' '_' '_' '_' '_' '_' '_' '>' '>' '$' '$' '$' '$' '$' '$'\n",
             "  '$' '$' '$' '$' '$' '$' '-' '-']\n",
             " ['-' '_' '_' '_' '_' '_' '_' '_' '_' '_' '>' '>' '$' '$' '$' '$' '$' '$'\n",
             "  '$' '$' '$' '$' '$' '$' '-' '-']\n",
@@ -1119,18 +1078,15 @@
       ],
       "source": [
         "game.reset()\n",
-        "tactics = Tactics(game.url_root)\n",
         "for i in range(10): \n",
         "    # go left\n",
         "    left = [0,0,1,0,0]\n",
         "    print(\"##############################\")\n",
-        "    prev, curr = tactics.step(left)\n",
-        "    rwd = tactics.get_reward(prev, curr, has_moved=tactics.has_moved(left))\n",
-        "    observation,reward,done,_ = game.step(1)\n",
+        "    observation, reward, is_over, _ = game.step(left)\n",
         "    print(np.matrix(observation))\n",
         "    print('------------------------------')\n",
         "    print(f\"Move: {i+1}\")\n",
-        "    print('Reward:', rwd)\n",
+        "    print('Reward:', reward)\n",
         "    print(\"##############################\")\n"
       ]
     },
